--- a/src/quizzes/sample.yml
+++ b/src/quizzes/sample.yml
@@ -1,7 +1,7 @@
 title: Sample Quiz
 variations: 5
 questions:
-  - question: What does CSS stand for?
+  - question: What does _CSS_ stand for?
     answer: Cascading Style Sheets
     options:
       - Computer Stinky Stuff
@@ -11,23 +11,25 @@ questions:
     answer: |
       `<style>`
     options:
-      - |
-        `<css>`
-      - |
-        `<script>`
-      - |
-        `<stylesheet>`
+      - "`<css>`"
+      - "`<script>`"
+      - "`<stylesheet>`"
   - question: |
       Which property is used to change the background color in CSS?
-      ```css
-      background-color: blue;
-      ```
-    answer: |
-      `background-color`
+    answer: "`background-color`"
     options:
-      - |
-        `color`
-      - |
-        `bgcolor`
-      - |
-        `background`
+      - "`color`"
+      - "`bgcolor`"
+      - "`background`"
+  - question: |
+      What does the following code do?
+      ```css
+      body{
+        color:red
+      }
+      ```
+    answer: It changes the text color of the body to red.
+    options:
+      - It changes the background color of the body to red.
+      - It changes the border color of the body to red.
+      - It changes the font size of the body to red.
